concord_examples/tests/ui/missing_placeholder_type.stderr
error: expected `:`
  --> tests/ui/missing_placeholder_type.rs:3:1
   |
 3 | / api! {
 4 | |     client UiMissingType {
 5 | |         scheme: https,
 6 | |         host: "example.com",
...  |
 9 | |     GET One "x" / {id} -> Json<()>;
10 | | }
   | |_^
   |
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
